tests/ui/error-codes/E0393.stderr
error[E0393]: the type parameter `T` must be explicitly specified
  --> $DIR/E0393.rs:3:47
   |
LL | trait A<T=Self> {}
   | --------------- type parameter `T` must be specified for this
LL |
LL | fn together_we_will_rule_the_galaxy(son: &dyn A) {}
   |                                               ^
   |
   = note: because the parameter default references `Self`, the parameter must be specified on the object type
help: set the type parameter to the desired type
   |
LL | fn together_we_will_rule_the_galaxy(son: &dyn A<T>) {}
   |                                                +++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0393`.
